deployment/11-security_groups.tf
resource "aws_security_group" "bastion_host_sg" {
  name        = "${local.prefix}-bastion-host-sg"       //Nombre del grupo de seguridad
  description = "Allows SSH into bastion host instance" //Descripción del grupo de seguridad
  vpc_id      = aws_vpc.main.id                         //ID de la VPC

  ingress {
    from_port   = 22                                      //Puerto de origen
    to_port     = 22                                      //Puerto de destino
    protocol    = "TCP"                                   //Protocolo de red permite que los paquetes de red se comuniquen entre sí
    cidr_blocks = [var.bastion_host_cidr]                 //Rango de direcciones IPv4 para la subred
    description = "Allows SSH into bastion host instance" //Descripción de la regla de entrada
  }

  egress {
    from_port   = 0                                   //Puerto de origen
    to_port     = 0                                   //Puerto de destino
    protocol    = "-1"                                //Protocolo de red permite que los paquetes de red se comuniquen entre sí
    cidr_blocks = [var.global_destination_cidr_block] //Rango de direcciones IPv4 para la subred
  }

  tags = merge(
    local.common_tags,                                    //merge combina dos mapas en un solo mapa
    tomap({ "Name" = "${local.prefix}-bastion-host-sg" }) //tomap convierte un valor en un mapa
  )
}

resource "aws_security_group" "alb_sg" {
  name        = "${local.prefix}-alb-sg"                               //Nombre del grupo de seguridad
  description = "Allows traffic through the application load balancer" //Descripción del grupo de seguridad
  vpc_id      = aws_vpc.main.id                                        //ID de la VPC

  ingress {
    from_port   = 80 //Puerto de origen
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = [var.global_destination_cidr_block]
    description = "Allows HTTP traffic to load balancer"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = [var.global_destination_cidr_block]
    description = "Allows HTTPS traffic to load balancer"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.global_destination_cidr_block]
  }

  tags = merge(
    local.common_tags,
    tomap({ "Name" = "${local.prefix}-alb-sg" })
  )
}

resource "aws_security_group" "autoscaling_group_sg" {
  name        = "${local.prefix}-autoscaling-group-sg"
  description = "Allows internet access for instances lauched with ASG"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "TCP"
    security_groups = [aws_security_group.alb_sg.id]
    description     = "Allows HTTP traffic into webserver"
  }

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "TCP"
    security_groups = [aws_security_group.alb_sg.id]
    description     = "Allows HTTPS traffic into webserver"
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "TCP"
    security_groups = [aws_security_group.bastion_host_sg.id]
    description     = "Allows access to webserver through bastion host"
  }

  ingress {
    from_port       = 5000
    to_port         = 5000
    protocol        = "TCP"
    security_groups = [aws_security_group.alb_sg.id]
    description     = "Allows access to webserver through ALB"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.global_destination_cidr_block]
  }

  tags = merge(
    local.common_tags,
    tomap({ "Name" = "${local.prefix}-autoscaling-group-sg" })
  )
}

resource "aws_security_group" "elasticache_sg" {
  name        = "${local.prefix}-elasticache-sg"
  description = "Allows access to elasticache service"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "TCP"
    security_groups = [aws_security_group.bastion_host_sg.id]
    description     = "Allows access to redis server through bastion host"
  }

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "TCP"
    security_groups = [aws_security_group.autoscaling_group_sg.id]
    description     = "Allows access to redis server through ASG"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.global_destination_cidr_block]
  }

  tags = merge(
    local.common_tags,
    tomap({ "Name" = "${local.prefix}-elasticache-sg" })
  )
}
